<resources>
    <string name="app_name">PickUp</string>

    <string name="send">Send</string>
    <string name="pick">Pick</string>
    <string name="sign_up">Sign Up</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="sign">SIGN UP</string>
    <string name="phone">Phone</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="account">Account</string>
    <string name="payment">Payment</string>
    <string name="packages">Packages</string>
    <string name="textview">TextView</string>
    <string name="help">Help</string>
    <string name="anytime_anywhere">AnyTime AnyWhere</string>
    <string name="title_activity_maps">Map</string>
    <string name="where_to_send">Where To Send</string>
    <string name="find_a_picker">Find a Picker</string>
    <string name="log_in">Log In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">sign_up</string>
    <string name="more">More</string>
    <string name="login">login</string>
    <string name="logo">logo</string>
    <string name="save">Save</string>
    <string name="cvv_number">CVV Number</string>
    <string name="todo">TODO</string>
    <string name="press_the_exp_date_here">Press the EXP date here</string>
    <string name="name_on_the_card">Name on the Card</string>
    <string name="cradit_card_information">Cradit Card information</string>
    <string name="card_number">Card Number</string>
    <string name="sginup">sginup</string>
    <string name="small_car_or_truck">small_car_or_truck</string>
    <string name="car_type">car_type</string>
    <string name="car_model">car_model</string>
    <string name="car_information">Car information</string>
    <string name="id_number">id_number</string>
    <string name="account1">Account</string>
    <string name="payment1">Payment</string>
    <string name="logout">Logout</string>
    <string name="title_activity_package_s">PackageS</string>
    <string name="title_activity_current_loc">CurrentLoc</string>
    <string name="title_activity_direction1">Map</string>
    <string name="title_activity_maps1">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_first">Map</string>
    <string name="title_activity_maps3">Map</string>
    <string name="title_activity_maps4">Map</string>
</resources>
