<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2CF0F"
    tools:context=".Homepage">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="440dp"
        android:layout_height="845dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/citybackground" />

    <Button
        android:id="@+id/SendButton"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="36dp"
        android:background="#80FFFFFF"
        android:text="@string/send"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#19292C"
        android:textColorHighlight="#B5B50808"
        android:textColorLink="#F8F7F2F2"
        android:textSize="36sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pickButton"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/pickButton"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:background="#80FFFFFF"
        android:text="@string/pick"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#19292C"
        android:textColorHighlight="#B5B50808"
        android:textColorLink="#F8F7F2F2"
        android:textSize="36sp"
        android:textStyle="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/SendButton"
        app:layout_constraintEnd_toStartOf="@+id/SendButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>