<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EEE1"
    tools:context=".MapsActivity">

    <Button
        android:id="@+id/Pickerbutton2"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="42dp"
        android:background="#F2CF0F"
        android:text="@string/find_a_picker"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_location" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="80dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="503dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_menu_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/SendtextView"
        app:layout_constraintStart_toStartOf="@id/map"
        app:layout_constraintTop_toTopOf="@id/map"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_home_black_24dp" />

    <SearchView

        android:id="@+id/sv_location"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="37dp"
        android:background="#FFFFFF"
        android:elevation="5dp"
        android:iconifiedByDefault="false"
        android:queryHint="Search"
        app:layout_constraintBottom_toTopOf="@+id/Pickerbutton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SendtextView"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/SendtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="227dp"
        android:text="@string/where_to_send"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#B5B50808"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="424dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/SendtextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>